--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/maletin-rojo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Valentino Araya | Portafolio
     </title>
   </head>
