soluciono error de carga en projectDetail

--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/maletin-rojo.ico" />
+    <link rel="icon" type="image/svg+xml" href="/faviocn.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#161A1D"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>Valentino Araya | Portafolio
-    </title>
+    <title>Valentino Araya | Portafolio</title>
   </head>
   <body>
     <div id="root"></div>
